# zephyr-template

./: CMakeLists.txt  prj.conf  west.yml
src/: main.c
